# yet-another-flask-compose-boilerplate

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  conftest.py  database.conf  db_config.py  docker-compose.yml  init_db.sh  pyproject.toml  run_server.py  runtests.py
alembic/: env.py
alembic/versions/: 2025_03_07-16c69aabb0f5_add_user_is_active.py  2025_03_07-dd7a927a285d_initial_migration.py
backend/api/: __init__.py  user.py
backend/app/: configuration.py
backend/db/: base.py  exceptions.py  session.py
backend/db/models/: user.py
backend/db/repository/: user.py
backend/db/tests/: test_user_repo.py
backend/lib/: exceptions.py  logger.py
tests/: test_app.py
utils/: security.py
